# yolo-auto-annotation

./: README.md  main.py  pyproject.toml
